--- a/app/Resources/views/manga/index.html.twig
+++ b/app/Resources/views/manga/index.html.twig
@@ -13,41 +13,38 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>Id</th>
                     <th>{{ "manga.title"|trans({}, 'manga') }}</th>
                     <th>{{ "manga.author"|trans({}, 'manga') }}</th>
                     <th>{{ "manga.status"|trans({}, 'manga') }}</th>
-                    <th>{{ "manga.views"|trans({}, 'manga') }}</th>
+                    <th>{{ "manga.genre"|trans({}, 'manga') }}</th>
                     <th>{{ "manga.action"|trans({}, 'manga') }}</th>
                 </tr>
             </thead>
             <tbody>
             {% for manga in mangas %}
                 <tr>
-                    <td><a href="{{ path('manga_show', { 'id': manga.id }) }}">{{ manga.id }}</a></td>
                     <td>{{ manga.title }}</td>
                     <td>{{ manga.author }}</td>
                     <td>{{ manga.status }}</td>
-                    <td>{{ manga.views }}</td>
+                    <td>{% for genre in manga.genres %}
+                            {{ genre.name }},
+                        {% endfor %}
+                    </td>
                     <td>
-                        <ul>
+                        <ul>{% if is_granted('ROLE_ADMIN') %}
                             <li>
                                 <a href="{{ path('manga_edit', { 'id': manga.id }) }}">edit</a>
                             </li>
-                            {% if is_granted('ROLE_ADMIN') %}
+                            {% endif %}
                                 <li>
                                     <a href="{{ path('manga_show', { 'id': manga.id }) }}">show</a>
                                 </li>
-                            {% endif %}
+
                         </ul>
                     </td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
-
-
-
-
     </div>
 {% endblock %}
